# RazerBattery

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  debug_razer.ps1  generate_ids.py
include/: DeviceIds.h  Logger.h  RazerDevice.h  RazerManager.h  RazerProtocol.h  SingleInstance.h  TrayIcon.h
src/: Logger.cpp  Logger.h  RazerDevice.cpp  RazerDevice.h  RazerManager.cpp  RazerManager.h  TrayIcon.cpp  TrayIcon.h  main.cpp
